DRONI-117 <feat> : 사용자의 채팅방 목록을 가져오는 api 추가 [지라 이슈 링크]
